tests/snapshot/error/stack_trace/eval_throws.js
function foo() {
  eval('function bar() { throw new Error("test") }; bar()');
}

foo();